# codec-plc

./: .gitignore  README.md  main.py  pyproject.toml
configs/: accelerate_2gpu.yaml  default.yaml
scripts/: build_dred_cache.py  eval_rtf.py  prepare_sw.py  train.py  train_smoke.py  validate_model.py
src/: __init__.py  train.py
src/cache/: __init__.py  dred_cache.py  opus_dred.py
src/codec/: framing.py  model.py  quantizer.py
src/dac/: discriminator.py  packet_codec.py
src/dred/: __init__.py  provider.py
src/eval/: rtf.py
src/loss_sim/: packet_loss.py
src/state_repair/: mini_encoder.py  segment_autoencoder.py
src/streamloss_codec/: config.py  train.py
src/streamloss_codec/cache/: dred_cache.py  opus_dred.py
src/streamloss_codec/codec/: __init__.py  layers.py
src/streamloss_codec/dac/: __init__.py  layers.py  losses.py  model.py  packet_codec.py  quantizer.py
src/streamloss_codec/data/: __init__.py  prepare_sw.py  raw_speech.py
src/streamloss_codec/eval/: __init__.py
src/streamloss_codec/loss_sim/: __init__.py
src/streamloss_codec/state_repair/: __init__.py  mini_encoder.py  segment_autoencoder.py
